# ga-tests

.github/reusables/: fortran.yml
.github/reuse_steps/c_pure/: action.yml
.github/reuse_steps/fortran_pure/: action.yml
.github/reuse_steps/print_c/: action.yml
.github/reuse_steps/print_compiler/: action.yml
.github/reuse_steps/print_cxx/: action.yml
.github/reuse_steps/print_fortran/: action.yml
.github/reuse_steps/print_host/: action.yml
.github/workflows/: c_pure.yml  fortran_pure.yml
c/pure/: CMakeLists.txt  pure.c  pure_lib.c  pure_lib.h
config/: PrintInfo.cmake
fortran/pure/: CMakeLists.txt  pure.F90  pure_lib.F90
